release: prepare v4.0.3
